Change password reset logic to work without tokens
