# src/routes/authRouter/sendOtpPasswordResetRoute/sendPasswordResetOtpRoute.ts
@@ -1,7 +1,7 @@
-import { User } from "@prisma/client";
 import { Request, Response } from "express";
 import { prisma } from "../../../model/config/prismaClient";
 import {
+  DATA_NOT_FOUND,
   DATABASE_ERROR,
   sendError,
   ServerError,
@@ -10,9 +10,59 @@ import {
 import { generateOtp } from "../generateOtp";
 import { REQUEST_TOO_SOON } from "../../utils/errors/AuthErrors";
 import { sendEmail, sendEmailPython } from "../sendEmail";
+import { missingRequestField } from "../../../routes/utils/validation/missingRequestField";
+import {
+  SendPasswordResetOtpRequestBody,
+  sendPasswordResetOtpRequestBodyProperties,
+} from "../../../model/routesEntities/AuthRouterEntities";
+import { emptyField } from "../../../routes/utils/validation/emptyField";
+import { invalidInputFormat } from "./invalidInputFormat";
+
+//# Swagger описание SendPasswordResetOtp
+/**
+ * @swagger
+ * components:
+ *   schemas:
+ *     sendPasswordResetOtpRequest:
+ *       type: object
+ *       properties:
+ *         email:
+ *           type: string
+ *           description: Email пользователя, пароль от которого он пытается поменять
+ *           example: test_user@gmail.com
+ */
 
 export const sendPasswordResetOtp = async (req: Request, res: Response) => {
-  const user: User = req.body.user;
+  if (missingRequestField(req, res, sendPasswordResetOtpRequestBodyProperties))
+    return res;
+
+  if (emptyField(req, res, sendPasswordResetOtpRequestBodyProperties))
+    return res;
+  const sendPasswordResetOtpRequestBody: SendPasswordResetOtpRequestBody =
+    req.body;
+
+  if (invalidInputFormat(res, sendPasswordResetOtpRequestBody)) return res;
+
+  let user;
+  try {
+    user = await prisma.user.findFirst({
+      where: {
+        email: sendPasswordResetOtpRequestBody.email,
+      },
+    });
+  } catch (error) {
+    return sendError(res, new DATABASE_ERROR(error));
+  }
+
+  if (!user) {
+    return sendError(
+      res,
+      new DATA_NOT_FOUND(
+        "User",
+        `email = ${sendPasswordResetOtpRequestBody.email}`
+      )
+    );
+  }
 
   let existingPasswordResetOtp = null;
   try {
